[gd_scene load_steps=5 format=3 uid="uid://cues0bckyj5rb"]

[ext_resource type="Script" path="res://Scenes/MainMenu/level_progress_vertical/level_progress_vertical.gd" id="1_jisb2"]
[ext_resource type="PackedScene" uid="uid://dxsu53wvd6yhu" path="res://Scenes/MainMenu/level_progress_vertical/level.tscn" id="3_2xoib"]

[sub_resource type="Gradient" id="Gradient_qs6ak"]
colors = PackedColorArray(0.270293, 0.0168, 0.56, 0.745098, 0.270293, 0.0168, 0.56, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ioj6v"]
gradient = SubResource("Gradient_qs6ak")
fill_to = Vector2(0, 1)

[node name="LevelProgress2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jisb2")

[node name="Level3" parent="." instance=ExtResource("3_2xoib")]
offset_left = 277.0
offset_top = -22.0
offset_right = 447.0
offset_bottom = 260.0
type = "super_hard"
is_shadowed = true
level = 400

[node name="Level2" parent="." instance=ExtResource("3_2xoib")]
offset_left = 277.0
offset_top = 212.0
offset_right = 447.0
offset_bottom = 494.0
level = 300

[node name="Level1" parent="." instance=ExtResource("3_2xoib")]
offset_left = 277.0
offset_top = 457.0
offset_right = 447.0
offset_bottom = 739.0
type = "hard"
level = 200

[node name="Level0" parent="." instance=ExtResource("3_2xoib")]
offset_left = 277.0
offset_top = 708.0
offset_right = 447.0
offset_bottom = 990.0
type = "normal"
is_active = true
level = 100

[node name="Shadow" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 644.0
grow_horizontal = 2
texture = SubResource("GradientTexture2D_ioj6v")
